# MedRAG

./: .gitignore  PLAN (1).md  README.md  docker-compose.milvus.yml  medrag-agent-upgrade-plan.md  pyproject.toml  requirements.txt  webui.py
api/: __init__.py  chat_service.py
config/: prompt_templates.py  settings.py
data_processor/: __init__.py  case_parser.py  case_summary.py  text_cleaner.py  toyhom_loader.py
docs/superpowers/plans/: 2026-06-08-memory-system.md
eval/: golden_cases.jsonl  run_ragas_deepseek.py  run_ragas_eval.py  run_ragas_final.py
eval/reports/: ragas_report.json
frontend/: index.html  script.js  style.css
llm/: __init__.py  clients.py
rag/: __init__.py  answer_generator.py  prompt_builder.py  safety_guard.py
retriever/: __init__.py  hybrid_retriever.py  intent.py  kg_retriever.py  reranker.py  router.py
scripts/: create_tables.sql
service/: __init__.py  chat_service.py
src/medrag/: __init__.py  prompts.py
src/medrag/app/: auth_manager.py  chat_page.py  document_store.py  schemas.py  server.py  session_store.py
src/medrag/auth/: credentials.py
src/medrag/config/: settings.py
src/medrag/data/: __init__.py  case_summary.py  cmedqa2_loader.py  toyhom_loader.py  user_case_store.py
src/medrag/llm/: __init__.py  clients.py  provider.py
src/medrag/react/: tools.py  (+2 more)
tests/: test_answer_layer.py  test_eval_script.py  test_integration_cases.py  test_memory_system.py  test_phase2_llm_injection.py  test_query_routing_cases.py
vector_store/: build_toyhom_index.py  embedding.py  eval_retrieval_strategies.py  toyhom_retriever.py
(+34 files in other folders)
