[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "medrag"
version = "2.0.0"
description = "Medical RAG Q&A System"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = [
    "auth",
    "auth.*",
    "config",
    "config.*",
    "data_processor",
    "data_processor.*",
    "llm",
    "llm.*",
    "rag",
    "rag.*",
    "retriever",
    "retriever.*",
    "service",
    "service.*",
    "vector_store",
    "vector_store.*",
]
